SERVER-120733: check local and remote hello errors (#50035)

Co-authored-by: Mike Nugent <mike.nugent@mongodb.com>
GitOrigin-RevId: 95ada9e4e090d910551ed36eacd62a8d5763ad1a